--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,16 @@
   background-color: #fad675;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
 .App-header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: #18293a;
+  margin-bottom: 20px;
 }
 
