--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,16 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
   min-height: 100vh;
   background-color: #fad675;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .App-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  font-size: calc(10px + 2vmin);
-  color: #18293a;
-  margin-bottom: 20px;
+  width: 18%;
+  margin: 70px 40px
 }
-
