--- a/src/components/bmi_calculate/style.css
+++ b/src/components/bmi_calculate/style.css
@@ -8,6 +8,14 @@
 input{
     border: none;
     border-radius: 5px;
-    width: 200px;
+    width: 250px;
     height: 25px;
+    padding: 5px 8px;
+}
+
+select{
+    background-color: #14b6a5;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
 }
